<resources>
    <string name="Free">FREE</string>
    <string name="LIVE">LIVE</string>
    <string name="Leaderboard_preview_empty_send_gift_to_be_number_one">Send Virtual Gifts to be #1</string>
    <string name="Player_blocker_subtitle_diagnostic_failed">"We couldn't resolve the issue with a quick check. Please try again later, or report the problem."</string>
    <string name="Upcoming">Upcoming</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_and_settings_list_group_chat">Group Chat</string>
    <string name="account_and_settings_list_help_center">Help Center</string>
    <string name="account_and_settings_list_my_packages">My Packages</string>
    <string name="account_and_settings_list_settings">Settings</string>
    <string name="account_and_settings_list_settings_alert_complete_your_profile">Complete your profile</string>
    <string name="account_and_settings_list_subscription">Subscription</string>
    <string name="account_and_settings_list_vidio_affiliate">Vidio Affiliate</string>
    <string name="account_and_settings_list_watch_history">Watch History</string>
    <string name="account_page_offer_default_subtitle">Series, movies, sports, and more</string>
    <string name="account_page_offer_default_title">Exclusive entertainment for you</string>
    <string name="account_page_offer_reactivate_subtitle">Keep watching without limits</string>
    <string name="account_page_offer_reactivate_title">Reactivate your plan now</string>
    <string name="account_page_offer_renew_subtitle">Extend to keep watching</string>
    <string name="account_page_offer_renew_title">Your subscription expires soon!</string>
    <string name="account_settings_description">Profile, password, and account security</string>
    <string name="account_settings_list_delete_account">Delete Account</string>
    <string name="account_settings_list_email">Email</string>
    <string name="account_settings_list_mobile_number">Mobile Number</string>
    <string name="account_settings_list_password">Password</string>
    <string name="account_signin_subtitle">Get the best recommendations</string>
    <string name="account_signin_title">Let’s get you signed in</string>
    <string name="action_downloaded">Downloaded</string>
    <string name="action_start_play">Start Watching</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_watch_later">Watch Later</string>
    <string name="activate_camera">Activate</string>
    <string name="activate_notification_desc">"No worries, you'll only receive info that's relevant to you."</string>
    <string name="activate_notification_title">"Let's turn on the push notification!"</string>
    <string name="activate_package_title">Activate Package</string>
    <string name="ad_label">AD</string>
    <string name="add_to_home">Add to home</string>
    <string name="add_to_list">Add to My List</string>
    <string name="added_to_list">Added to My List</string>
    <string name="affinity_feedback_list_interested">Interested</string>
    <string name="affinity_feedback_list_not_interested">Not interested</string>
    <string name="age_gender_terms_privacy" formatted="false">"By completing profile, you agree to Vidio's %s &amp; %s"</string>
    <string name="android_item_already_owned_bottom_sheet_subtitle_you_already_have_this_package">Looks like there is an unfinished purchase. Check the status on this account or another account connected to your Google ID. Need Help? &lt;a href=#>Report Problem&lt;/a></string>
    <string name="android_item_already_owned_bottom_sheet_title_you_already_have_this_package">You already have this package</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anytime_anywhere">Watching is now easier with Downloads</string>
    <string name="anytime_anywhere_desc">"Just download your favorite shows or movies, then you can watch it anywhere, anytime, even when you're offline."</string>
    <string name="app_id_chromecast_production">B5601580</string>
    <string name="app_name">Vidio</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arcade_dialog_alarm_perm">To get exact timer, allow alarm &amp; reminders permission.</string>
    <string name="benefit_download_desc">Stream anywhere, even when you’re offline</string>
    <string name="benefit_download_title">Download Feature</string>
    <string name="benefit_no_ad_desc">Watch without ads (except on TV channels)</string>
    <string name="benefit_no_ad_title">No Video Ads</string>
    <string name="benefit_premier_desc">Curated content exclusively for you</string>
    <string name="benefit_premier_title">Premier Shows</string>
    <string name="bitrate_faq_url">https://support.vidio.com/support/solutions/articles/43000687214-mengapa-saya-tidak-bisa-menonton-dengan-resolusi-tertentu-</string>
    <string name="blocker_subtitle_bedtime">Give the gadget to Mommy or Daddy and get ready for bed. We’ll continue our adventure tomorrow!</string>
    <string name="blocker_title_bedtime">Hoaam… time for bed now…</string>
    <string name="blocker_title_failed_to_load_page">Failed to load page</string>
    <string name="boring_content">Boring shows and movies</string>
    <string name="bottom_dialog_verification_title">Verification</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_sheet_app_rating_description">Rate us now, so we can serve you better!</string>
    <string name="bottom_sheet_app_rating_title">Enjoying Vidio?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_clear_data">Clear Data</string>
    <string name="bottom_sheet_clear_data_agree">Yes, Delete Cache</string>
    <string name="bottom_sheet_clear_data_warn">By doing this, all cache will be removed. No worries, you downloads won’t be deleted.</string>
    <string name="bottom_sheet_delete_profile_confirmation_subtitle_delete_this_profile">Watching history, watchlist, and activity will be deleted. There is no way to undo this.</string>
    <string name="bottom_sheet_delete_profile_confirmation_title_delete_this_profile">Delete %s’s profile?</string>
    <string name="bottom_sheet_purchase_retryable_continue">Continue Purchase</string>
    <string name="bottom_sheet_purchase_validator_continue">Continue Purchase</string>
    <string name="bottom_sheet_subtitle_failed_to_load_ad">There seems to be an issue while loading the ad.</string>
    <string name="bottom_sheet_title_failed_to_load_ad">Failed to load ad</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btmsheet_cta_deactivate_pin">Yes, Deactivate PIN</string>
    <string name="btmsheet_subtitle_delete_pin">The PIN you’ve created will also be deleted.</string>
    <string name="btmsheet_title_deactivate_pin">Deactivate PIN?</string>
    <string name="bubble_gift_info">" send "</string>
    <string name="buffering_too_often">Buffering too often</string>
    <string name="buy_package">Buy Package</string>
    <string name="by">by</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="cancel_download_description">Your download process will stop once you cancel it</string>
    <string name="cancel_download_title">Cancel download?</string>
    <string name="cancel_feature_explanation">You’ll be missing out on these cool stuff</string>
    <string name="cancel_reason_content_not_interesting">I don’t find anything interesting to watch</string>
    <string name="cancel_reason_do_not_use_vidio_enough">I rarely use Vidio</string>
    <string name="cancel_reason_issue_with_app">Issues with the app</string>
    <string name="cancel_reason_others">Others</string>
    <string name="cancel_reason_payment_problem">Problems with payment and billing</string>
    <string name="cancel_reason_switch_to_another_platform">I want to switch to another platform</string>
    <string name="cancel_subscription_complete_desc">We’re sad to see you go. But when you change your mind, we’ll be here to welcome you back with the best TV shows and movies!</string>
    <string name="cancel_subscription_complete_title">Your subscription has been canceled</string>
    <string name="cta_cancel">Cancel</string>
    <string name="cta_delete">Delete</string>
    <string name="cta_reload">Reload</string>
    <string name="cta_report">Report</string>
    <string name="cta_send">Send</string>
    <string name="cta_try_again">Try Again</string>
    <string name="download_menu_pause">Pause Download</string>
    <string name="download_menu_resume">Resume Download</string>
    <string name="error_message_failed_to_load_playlist">Failed to load this section. Give it a try in a moment, please.</string>
    <string name="error_title_no_internet">You seem to be offline</string>
    <string name="font_roboto_medium">sans-serif</string>
    <string name="redownload">Restart Download</string>
</resources>