<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/failed_load_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="50.0dip" android:layout_marginEnd="50.0dip" app:layout_constraintBottom_toTopOf="@id/failed_load_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" app:srcCompat="@drawable/ic_illustration_failed" />
    <TextView android:textSize="@dimen/medium_text" android:textColor="@color/textPrimary" android:id="@id/failed_load_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/large_margin" android:text="@string/error_title_no_internet" android:fontFamily="@string/font_roboto_medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/failed_load_img" />
    <com.vidio.vidikit.VidioButton android:id="@id/reloadBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:text="@string/cta_reload" app:componentSize="large" app:componentStyle="fixed" app:componentVariant="primary" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/failed_load_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
