<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/rounded_bottom_sheet_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/btn_close" android:background="@drawable/bg_button_remove_login_popup" android:padding="10.0dip" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="@dimen/large_margin" android:layout_marginEnd="@dimen/large_margin" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_cross" app:tint="@color/iconPrimary" />
    <TextView android:textColor="@color/textPrimary" android:ellipsize="end" android:gravity="center" android:id="@id/tv_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="44.0dip" android:maxLines="1" android:layout_marginStart="@dimen/ultra_large_margin" android:layout_marginEnd="@dimen/ultra_large_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Title3" />
    <TextView android:textColor="@color/textPrimary" android:gravity="center" android:id="@id/tv_desc" android:paddingBottom="@dimen/double_large_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ultra_large_margin" android:layout_marginTop="@dimen/small_margin" android:layout_marginRight="@dimen/ultra_large_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/Caption" />
    <TextView android:textColor="@color/textPrimary" android:id="@id/btn_resume" android:background="?selectableItemBackground" android:paddingLeft="@dimen/huge_padding" android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/download_menu_resume" android:paddingEnd="@dimen/huge_padding" app:layout_constraintBottom_toTopOf="@id/btn_restart" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc" style="@style/Title4" />
    <TextView android:textColor="@color/textPrimary" android:id="@id/btn_restart" android:background="?selectableItemBackground" android:paddingLeft="@dimen/huge_padding" android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/redownload" android:paddingEnd="@dimen/huge_padding" app:layout_constraintBottom_toTopOf="@id/btn_pause" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_resume" style="@style/Title4" />
    <TextView android:textColor="@color/textPrimary" android:id="@id/btn_pause" android:background="?selectableItemBackground" android:paddingLeft="@dimen/huge_padding" android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/download_menu_pause" android:paddingEnd="@dimen/huge_padding" app:layout_constraintBottom_toTopOf="@id/btn_cancel" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_restart" style="@style/Title4" />
    <TextView android:textColor="@color/textPrimary" android:id="@id/btn_cancel" android:background="?selectableItemBackground" android:paddingLeft="@dimen/huge_padding" android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel_download" android:paddingEnd="@dimen/huge_padding" app:layout_constraintBottom_toTopOf="@id/btn_delete" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_pause" style="@style/Title4" />
    <TextView android:textColor="@color/textPrimary" android:id="@id/btn_delete" android:background="?selectableItemBackground" android:paddingLeft="@dimen/huge_padding" android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cta_delete" android:paddingEnd="@dimen/huge_padding" app:layout_constraintBottom_toTopOf="@id/emptyStateSpace" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_cancel" style="@style/Title4" />
    <Space android:id="@id/emptyStateSpace" android:layout_width="wrap_content" android:layout_height="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_delete" />
    <include android:id="@id/loading_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/bottom_dialog_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>
